--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -27,3 +27,28 @@ for (i in seq_along(lef_files)) {
 
 
 ```
+
+Julia code chunk
+```{r}
+
+```
+
+Scout code chunk
+```{r}
+
+
+```
+
+Marie code chunk
+```{r}
+
+
+
+```
+
+Steven code chunk
+```{r}
+
+
+```
+
