--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -9,6 +9,7 @@ knitr::opts_chunk$set(echo = TRUE)
 library(tidyverse)
 library(here)
 library(janitor)
+library(lubridate)
 ```
 
 Code below reads in and assigns multiple CSV files
@@ -41,7 +42,9 @@ Scout code chunk
 
 Marie code chunk
 ```{r}
-
+# cleaning data for BQ3
+BQ3 <- `QuebradaCuenca3-Bisley` %>% 
+  
 
 
 ```
