--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -21,7 +21,7 @@ lef_files <- list.files(here("data"), pattern = "*.csv")
 for (i in seq_along(lef_files)) {
     assign(lef_files[i] %>%
              str_remove(".csv"),
-           read_csv(here("data", lef_files[i])))
+           read_csv(here("data", lef_files[i]), na = c("-9999","-9999.0","-9999.00")))
   
 }
 
@@ -33,9 +33,8 @@ Julia code chunk
 
 ```
 
-Scout code chunk
+Scout code chunk: Cleaning BQ2
 ```{r}
-
 
 ```
 
