steven code chunk dates

--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -28,27 +28,53 @@ for (i in seq_along(lef_files)) {
 
 ```
 
-Julia code chunk
+Julia code chunk CQ1
 ```{r}
 
 ```
 
-Scout code chunk
+Scout code chunk C
 ```{r}
 
 
 ```
+
 
 Marie code chunk
 ```{r}
 
 
 
+
 ```
 
-Steven code chunk
+Steven code chunk PRM
 ```{r}
+prm <- RioMameyesPuenteRoto %>% 
+  
+  # clean name headings
+  clean_names() %>% 
+  
+  # changed date "character" to "datetime"
+  mutate(sample_date = lubridate::mdy(sample_date)) %>% 
+  
+  # separate out month column
+  separate(sample_date, into = c("year", "month"), sep = "/") %>% 
+  
+  # select columns three columns
+  # no3 in ug N/L
+  # K in ug N/L
+  
+  select("sample_date", "date", "year, "no3", "k")
+  
 
+prm
+
+
+prm_df <- ggplot(data = prm, aes(x = sample_date, y = no3)) +
+  geom_line()
+
+prm_df
 
 ```
 
