--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -59,7 +59,7 @@ qb2 <- `QuebradaCuenca2-Bisley` %>%
   mutate(month = month(sample_date))
 
 #plot no3 from qb2
-#unit is micrograms per liter. ranges from 0 to 1500
+#unit is micrograms per liter. (value ranges from 0 to 1500)
 
 qb2_no3 <- ggplot(data = qb2, aes(x = sample_date, y = no3)) +
   geom_line()
@@ -67,7 +67,7 @@ qb2_no3 <- ggplot(data = qb2, aes(x = sample_date, y = no3)) +
 qb2_no3
 
 #plot k from qb2
-#unit it mg/l. ranges from 0 to 4. 
+#unit it mg/l. (value ranges from 0 to 4) 
 
 qb2_k <- ggplot(data = qb2, aes(x = sample_date, y = k)) +
   geom_line()
