--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -62,15 +62,17 @@ BQ3 <- `QuebradaCuenca3-Bisley` %>%
   mutate(year = year(sample_date)) %>% 
   mutate(month = month(sample_date))
 
-BQ3_no3_plot <- ggplot(data = BQ3, aes(x = sample_date, y = k)) +
-  geom_line()
-
-BQ3_no3_plot
+BQ3_no3_plot <- ggplot(data = BQ3, aes(x = sample_date, y = no3)) +
+  geom_line(linetype = "dashed") +
+  labs(x = "year", y = "Nitrate (ug/L)")
   
 BQ3_k_plot <- ggplot(data = BQ3, aes(x = sample_date, y = k)) +
-  geom_line()
+  geom_line(linetype = "dashed") +
+  geom_vline(xintercept = as.numeric(as.Date("1990-01-01")), color = "blue") +
+  labs(x = "year", y = "Potassium (mg/L)")
+BQ3_k_plot
 
-(BQ3_no3_plot / BQ3_k_plot) & theme_classic()
+(BQ3_k_plot / BQ3_no3_plot) & theme_classic()
 
 
 ```
