started visualizations of the qb2 data

--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -10,6 +10,7 @@ library(tidyverse)
 library(here)
 library(janitor)
 library(lubridate)
+library(patchwork)
 ```
 
 Code below reads in and assigns multiple CSV files
@@ -73,6 +74,9 @@ qb2_k <- ggplot(data = qb2, aes(x = sample_date, y = k)) +
   geom_line()
 
 qb2_k
+
+qb2_k / qb2_no3
+
 ```
 
 
