working with legend and labels

--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -181,14 +181,15 @@ Visualizing All Sites (Scout)
 all_sites_k <- ggplot(data = all_sites, aes(x = sample_date, y = k)) +
   geom_line(aes(linetype = sample_id),
             size = 0.25,
-            show.legend = FALSE) +
+            show.legend = TRUE) +
   geom_vline(xintercept = as.numeric(as.Date("1989-09-21")), color = "blue", size = 1) +
   labs(title = "Impact of Hurricane Hugo on Stream Chemistry",
        subtitle = "Difference in Potassium and Nitrate at Stream Sites in the Luquillo Experimental Forest",
        x = NULL,
-       y = expression(paste("k mg ", l^{-1})))
+       y = expression(paste("k mg ", l^{-1}))) +
+  theme(legend.position = c(0.01, 0.01))
 
-all_sites_k
+all_sites_k 
 
 all_sites_no3 <- ggplot(data = all_sites, aes(x = sample_date, y = no3)) +
   geom_line(aes(linetype = sample_id),
@@ -202,6 +203,9 @@ all_sites_no3 <- ggplot(data = all_sites, aes(x = sample_date, y = no3)) +
 
 all_sites_no3
 
-all_sites_k / all_sites_no3
+```
+```{r}
+(all_sites_k / all_sites_no3) &
+  theme_minimal()
 ```
 
