--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -181,31 +181,39 @@ Visualizing All Sites (Scout)
 all_sites_k <- ggplot(data = all_sites, aes(x = sample_date, y = k)) +
   geom_line(aes(linetype = sample_id),
             size = 0.25,
-            show.legend = TRUE) +
+            show.legend = FALSE) +
   geom_vline(xintercept = as.numeric(as.Date("1989-09-21")), color = "blue", size = 1) +
   labs(title = "Impact of Hurricane Hugo on Stream Chemistry",
        subtitle = "Difference in Potassium and Nitrate at Stream Sites in the Luquillo Experimental Forest",
        x = NULL,
        y = expression(paste("k mg ", l^{-1}))) +
-  theme(legend.position = c(0.01, 0.01))
+  scale_x_date(position = "top")
 
 all_sites_k 
 
 all_sites_no3 <- ggplot(data = all_sites, aes(x = sample_date, y = no3)) +
   geom_line(aes(linetype = sample_id),
             size = 0.25,
-            show.legend = FALSE) +
+            show.legend = TRUE) +
   geom_vline(xintercept = as.numeric(as.Date("1989-09-21")), color = "blue", size = 1) +
-  labs(x = "Year",
-       y = NULL,
-       caption = "McDowell, W. 2021. Chemistry of stream water from the Luquillo Mountains ver 4923052. Environmental Data Initiative.")
+  labs(x = NULL,
+       y = expression(paste(NO[3]," ", "-N ", ug, l^{-1})),
+       caption = "McDowell, W. 2021. Chemistry of stream water from the Luquillo Mountains ver 4923052. Environmental Data Initiative.") +
+  theme(axis.text.x = element_blank())
   
 
 all_sites_no3
 
 ```
+
+
 ```{r}
 (all_sites_k / all_sites_no3) &
-  theme_minimal()
+  theme_minimal() +
+  theme(legend.position = c(0.9, 0.6),
+        legend.background = element_blank(),
+        legend.key.size = unit(0.1, 'cm'), 
+        legend.title = element_blank(),
+        )
 ```
 
