--- a/coqui_lef.Rmd
+++ b/coqui_lef.Rmd
@@ -10,6 +10,7 @@ library(tidyverse)
 library(janitor)
 library(lubridate)
 library(patchwork)
+library(here)
 
 ```
 
@@ -132,9 +133,11 @@ all_sites_k <- ggplot(data = all_sites, aes(x = sample_date, y = k)) +
        subtitle = "Difference in Potassium and Nitrate at Stream Sites in the Luquillo Experimental Forest",
        x = NULL,
        y = expression(paste("k mg ", l^{-1}))) +
-  scale_x_date(position = "top")
+  scale_x_date(position = "top") +
+  theme_minimal()
 
-#all_sites_k (used to view separate graphs before combining)
+#all_sites_k 
+#(used to view separate graphs before combining)
 
 all_sites_no3 <- ggplot(data = all_sites, aes(x = sample_date, y = no3)) +
   geom_line(aes(linetype = sample_id),
@@ -144,17 +147,18 @@ all_sites_no3 <- ggplot(data = all_sites, aes(x = sample_date, y = no3)) +
   labs(x = NULL,
        y = expression(paste(NO[3]," ", "-N ", ug, l^{-1})),
        caption = "McDowell, W. 2021. Chemistry of stream water from the Luquillo Mountains ver 4923052. Environmental Data Initiative.") +
+  theme_minimal() +
   theme(axis.text.x = element_blank())
   
 
-#all_sites_no3 (used to view separate graphs before combining)
+#all_sites_no3 
+#(used to view separate graphs before combining)
 
 ```
 
 
 ```{r}
 (all_sites_k / all_sites_no3) &
-  theme_minimal() +
   theme(legend.position = c(0.9, 0.6),
         legend.background = element_blank(),
         legend.key.size = unit(0.1, 'cm'), 
