--- a/image_test.Rmd
+++ b/image_test.Rmd
@@ -16,18 +16,28 @@ library(patchwork)
 
 Code below reads in and assigns multiple CSV files
 ```{r}
-# create a list of file names to read in
+# Reading in .csv files and assigning NA values
 
-lef_files <- list.files("/courses/EDS214/coqui_crew/data", pattern = "*.csv")
 
-# loop over the files, reading in, and creating a stored object with assign
-for (i in seq_along(lef_files)) {
-    assign(lef_files[i] %>%
-             str_remove(".csv"),
-           read_csv(here("data", lef_files[i]), na = c("-9999","-9999.0","-9999.00")))
-}
+'QuebradaCuencal-Bisley' <- read_csv("/courses/EDS214/coqui_crew/data/QuebradaCuenca1-Bisley.csv", na = c("-9999","-9999.0","-9999.00"))
+
+'QuebradaCuenca2-Bisley' <- read_csv("/courses/EDS214/coqui_crew/data/QuebradaCuenca2-Bisley.csv", na = c("-9999","-9999.0","-9999.00"))
+
+'QuebradaCuenca3-Bisley' <- read_csv("/courses/EDS214/coqui_crew/data/QuebradaCuenca3-Bisley.csv", na = c("-9999","-9999.0","-9999.00"))
+
+'RioMameyesPuenteRoto' <- read_csv("/courses/EDS214/coqui_crew/data/RioMameyesPuenteRoto.csv", na = c("-9999","-9999.0","-9999.00"))
+
+
+                                   
+
 ```
 
+![Coqui Image](images/coqui_npr.jpg)
+
+![Coqui Crew Workflow Branches](images/coqui_crew_branches.png)
 
 
 
+![Coqui Image](images/coqui_npr.jpg)
+
+![Coqui Crew Workflow Branches](images/coqui_crew_branches.png)
